--- a/calculator.html
+++ b/calculator.html
@@ -13,6 +13,10 @@ function inverse() {
  var num = document.getElementById("n1");
  num.value = 1/num.value;
 }
+function quarter() {
+ var num = document.getElementById("n1");
+ num.value = Math.pow(num.value, 4);
+}
 </script>
 </head>
 <body>
@@ -23,6 +27,7 @@ function inverse() {
  <button onclick="cube()"> x^3 </button>
  <button onclick="square()"> x^2 </button>
  <button onclick="inverse()"> 1/x </button>
+  <button onclick="quarter()"> x^4 </button>
  </p>
 </body>
 </html>
