--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,10 @@ function square() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 2);
 }
+function inverse() {
+ var num = document.getElementById("n1");
+ num.value = 1/num.value;
+}
 </script>
 </head>
 <body>
@@ -18,6 +22,7 @@ function square() {
  <p>
  <button onclick="cube()"> x^3 </button>
  <button onclick="square()"> x^2 </button>
+ <button onclick="inverse()"> 1/x </button>
  </p>
 </body>
 </html>
